--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       flex-direction: column;
       min-height: 100vh;
       margin: 0;
+      width: initial;
     }
 
     main {
@@ -33,7 +34,8 @@
 
     main,
     header {
-      width: 100%;
+      width: -moz-available;
+      width: -webkit-fill-available;
       max-width: 600px;
       margin: 20px auto;
       padding: 20px;
@@ -225,7 +227,7 @@
       ningún tipo.
     </p>
     <p>
-      ¿Te interesa el código? ¡Échale un vistazo en GitHub! <a href="https://github.com/antikorps/bbcode_fichas" target="_blank">Ver código fuente</a>
+      ¿Te interesa el código? ¡Échale un vistazo en GitHub! <a href="URL_DEL_REPOSITORIO">Ver código fuente</a>
     </p>
   </footer>
 
